@@ -65,7 +65,7 @@ static const wxCmdLineEntryDesc cmdLineDesc[] =
 
     { wxCMD_LINE_PARAM,  NULL, NULL, wxT("input files"), wxCMD_LINE_VAL_STRING, wxCMD_LINE_PARAM_MULTIPLE },
 
-    { wxCMD_LINE_NONE }
+    { wxCMD_LINE_NONE, NULL, NULL, NULL, wxCMD_LINE_VAL_NONE, 0 }
   };
 
 
